src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__semantic_oracle__divergent_child_exact_update_alternatives.snap
---
source: src/pre_push/publication_attempt/semantic_oracle.rs
expression: "UpdateAlternatives\n{\n    publisher_a: update_snapshot(&a_attempt.trace), publisher_b:\n    update_snapshot(&b_attempt.trace),\n}"
---
publisher_a:
  - id: Groot
    number: 100
    node_id: PR_100
    title: ~
    body:
      - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
      - ""
      - Root body
      - ""
      - "---"
      - ""
      - "- 　  #101"
      - "- 👉 #100"
      - ""
      - "<details>"
      - "<summary><strong>⬇️ Download this PR</strong></summary>"
      - ""
      - "######"
      - ""
      - "**Branch**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git checkout -b pr-Groot FETCH_HEAD"
      - "```"
      - ""
      - "**Checkout**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git checkout FETCH_HEAD"
      - "```"
      - ""
      - "**Cherry Pick**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git cherry-pick FETCH_HEAD"
      - "```"
      - ""
      - "**Pull**"
      - "```bash"
      - "git pull https://github.com/owner/repo.git refs/heads/Groot"
      - "```"
      - ""
      - "</details>"
      - ""
      - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
    base_branch: ~
  - id: GA
    number: 101
    node_id: PR_101
    title: ~
    body:
      - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
      - ""
      - A body
      - ""
      - "---"
      - ""
      - "- 👉 #101"
      - "- 　  #100"
      - ""
      - "<details>"
      - "<summary><strong>⬇️ Download this PR</strong></summary>"
      - ""
      - "######"
      - ""
      - "**Branch**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/GA && git checkout -b pr-GA FETCH_HEAD"
      - "```"
      - ""
      - "**Checkout**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/GA && git checkout FETCH_HEAD"
      - "```"
      - ""
      - "**Cherry Pick**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/GA && git cherry-pick FETCH_HEAD"
      - "```"
      - ""
      - "**Pull**"
      - "```bash"
      - "git pull https://github.com/owner/repo.git refs/heads/GA"
      - "```"
      - ""
      - "</details>"
      - ""
      - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
    base_branch: ~
publisher_b:
  - id: Groot
    number: 100
    node_id: PR_100
    title: ~
    body:
      - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
      - ""
      - Root body
      - ""
      - "---"
      - ""
      - "- 　  #102"
      - "- 👉 #100"
      - ""
      - "<details>"
      - "<summary><strong>⬇️ Download this PR</strong></summary>"
      - ""
      - "######"
      - ""
      - "**Branch**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git checkout -b pr-Groot FETCH_HEAD"
      - "```"
      - ""
      - "**Checkout**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git checkout FETCH_HEAD"
      - "```"
      - ""
      - "**Cherry Pick**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git cherry-pick FETCH_HEAD"
      - "```"
      - ""
      - "**Pull**"
      - "```bash"
      - "git pull https://github.com/owner/repo.git refs/heads/Groot"
      - "```"
      - ""
      - "</details>"
      - ""
      - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
    base_branch: ~
  - id: GB
    number: 102
    node_id: PR_102
    title: ~
    body:
      - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
      - ""
      - B body
      - ""
      - "---"
      - ""
      - "- 👉 #102"
      - "- 　  #100"
      - ""
      - "<details>"
      - "<summary><strong>⬇️ Download this PR</strong></summary>"
      - ""
      - "######"
      - ""
      - "**Branch**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/GB && git checkout -b pr-GB FETCH_HEAD"
      - "```"
      - ""
      - "**Checkout**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/GB && git checkout FETCH_HEAD"
      - "```"
      - ""
      - "**Cherry Pick**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/GB && git cherry-pick FETCH_HEAD"
      - "```"
      - ""
      - "**Pull**"
      - "```bash"
      - "git pull https://github.com/owner/repo.git refs/heads/GB"
      - "```"
      - ""
      - "</details>"
      - ""
      - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
    base_branch: ~
