src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__semantic_oracle__mixed_projection_alias_subsets.snap
---
source: src/pre_push/publication_attempt/semantic_oracle.rs
expression: snapshots
---
- applied_aliases: []
  durable_open_numbers:
    - 100
    - 101
    - 102
  retry:
    - - operation: close
        id: Gduplicates
        number: 101
        node_id: PR_101
      - operation: close
        id: Gduplicates
        number: 102
        node_id: PR_102
      - operation: update
        id: Gduplicates
        number: 100
        node_id: PR_100
        title: Title for Gduplicates
        body:
          - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
          - ""
          - Body for Gduplicates
          - ""
          - "---"
          - ""
          - "- 👉 #100"
          - ""
          - "<details>"
          - "<summary><strong>⬇️ Download this PR</strong></summary>"
          - ""
          - "######"
          - ""
          - "**Branch**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout -b pr-Gduplicates FETCH_HEAD"
          - "```"
          - ""
          - "**Checkout**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout FETCH_HEAD"
          - "```"
          - ""
          - "**Cherry Pick**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git cherry-pick FETCH_HEAD"
          - "```"
          - ""
          - "**Pull**"
          - "```bash"
          - "git pull https://github.com/owner/repo.git refs/heads/Gduplicates"
          - "```"
          - ""
          - "</details>"
          - ""
          - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
        base_branch: ~
- applied_aliases:
    - 0
  durable_open_numbers:
    - 100
    - 102
  retry:
    - - operation: close
        id: Gduplicates
        number: 102
        node_id: PR_102
      - operation: update
        id: Gduplicates
        number: 100
        node_id: PR_100
        title: Title for Gduplicates
        body:
          - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
          - ""
          - Body for Gduplicates
          - ""
          - "---"
          - ""
          - "- 👉 #100"
          - ""
          - "<details>"
          - "<summary><strong>⬇️ Download this PR</strong></summary>"
          - ""
          - "######"
          - ""
          - "**Branch**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout -b pr-Gduplicates FETCH_HEAD"
          - "```"
          - ""
          - "**Checkout**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout FETCH_HEAD"
          - "```"
          - ""
          - "**Cherry Pick**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git cherry-pick FETCH_HEAD"
          - "```"
          - ""
          - "**Pull**"
          - "```bash"
          - "git pull https://github.com/owner/repo.git refs/heads/Gduplicates"
          - "```"
          - ""
          - "</details>"
          - ""
          - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
        base_branch: ~
- applied_aliases:
    - 1
  durable_open_numbers:
    - 100
    - 101
  retry:
    - - operation: close
        id: Gduplicates
        number: 101
        node_id: PR_101
      - operation: update
        id: Gduplicates
        number: 100
        node_id: PR_100
        title: Title for Gduplicates
        body:
          - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
          - ""
          - Body for Gduplicates
          - ""
          - "---"
          - ""
          - "- 👉 #100"
          - ""
          - "<details>"
          - "<summary><strong>⬇️ Download this PR</strong></summary>"
          - ""
          - "######"
          - ""
          - "**Branch**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout -b pr-Gduplicates FETCH_HEAD"
          - "```"
          - ""
          - "**Checkout**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout FETCH_HEAD"
          - "```"
          - ""
          - "**Cherry Pick**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git cherry-pick FETCH_HEAD"
          - "```"
          - ""
          - "**Pull**"
          - "```bash"
          - "git pull https://github.com/owner/repo.git refs/heads/Gduplicates"
          - "```"
          - ""
          - "</details>"
          - ""
          - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
        base_branch: ~
- applied_aliases:
    - 0
    - 1
  durable_open_numbers:
    - 100
  retry:
    - - operation: update
        id: Gduplicates
        number: 100
        node_id: PR_100
        title: Title for Gduplicates
        body:
          - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
          - ""
          - Body for Gduplicates
          - ""
          - "---"
          - ""
          - "- 👉 #100"
          - ""
          - "<details>"
          - "<summary><strong>⬇️ Download this PR</strong></summary>"
          - ""
          - "######"
          - ""
          - "**Branch**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout -b pr-Gduplicates FETCH_HEAD"
          - "```"
          - ""
          - "**Checkout**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout FETCH_HEAD"
          - "```"
          - ""
          - "**Cherry Pick**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git cherry-pick FETCH_HEAD"
          - "```"
          - ""
          - "**Pull**"
          - "```bash"
          - "git pull https://github.com/owner/repo.git refs/heads/Gduplicates"
          - "```"
          - ""
          - "</details>"
          - ""
          - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
        base_branch: ~
- applied_aliases:
    - 2
  durable_open_numbers:
    - 100
    - 101
    - 102
  retry:
    - - operation: close
        id: Gduplicates
        number: 101
        node_id: PR_101
      - operation: close
        id: Gduplicates
        number: 102
        node_id: PR_102
- applied_aliases:
    - 0
    - 2
  durable_open_numbers:
    - 100
    - 102
  retry:
    - - operation: close
        id: Gduplicates
        number: 102
        node_id: PR_102
- applied_aliases:
    - 1
    - 2
  durable_open_numbers:
    - 100
    - 101
  retry:
    - - operation: close
        id: Gduplicates
        number: 101
        node_id: PR_101
- applied_aliases:
    - 0
    - 1
    - 2
  durable_open_numbers:
    - 100
  retry: []
