src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__semantic_oracle__multi_request_update_restart.snap
---
source: src/pre_push/publication_attempt/semantic_oracle.rs
expression: snapshot
---
before_retry:
  - id: G0
    number: 100
    node_id: PR_100
    title: ~
    body:
      - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
      - ""
      - "{ repeated: U+0001, count: 90000 }"
      - ""
      - "---"
      - ""
      - "- 　  #102"
      - "- 　  #101"
      - "- 👉 #100"
      - ""
      - "<details>"
      - "<summary><strong>⬇️ Download this PR</strong></summary>"
      - ""
      - "######"
      - ""
      - "**Branch**"
      - "```bash"
      - git fetch origin refs/heads/G0 && git checkout -b pr-G0 FETCH_HEAD
      - "```"
      - ""
      - "**Checkout**"
      - "```bash"
      - git fetch origin refs/heads/G0 && git checkout FETCH_HEAD
      - "```"
      - ""
      - "**Cherry Pick**"
      - "```bash"
      - git fetch origin refs/heads/G0 && git cherry-pick FETCH_HEAD
      - "```"
      - ""
      - "**Pull**"
      - "```bash"
      - git pull origin refs/heads/G0
      - "```"
      - ""
      - "</details>"
      - ""
      - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
    base_branch: ~
  - id: G1
    number: 101
    node_id: PR_101
    title: ~
    body:
      - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
      - ""
      - "{ repeated: U+0001, count: 90000 }"
      - ""
      - "---"
      - ""
      - "- 　  #102"
      - "- 👉 #101"
      - "- 　  #100"
      - ""
      - "<details>"
      - "<summary><strong>⬇️ Download this PR</strong></summary>"
      - ""
      - "######"
      - ""
      - "**Branch**"
      - "```bash"
      - git fetch origin refs/heads/G1 && git checkout -b pr-G1 FETCH_HEAD
      - "```"
      - ""
      - "**Checkout**"
      - "```bash"
      - git fetch origin refs/heads/G1 && git checkout FETCH_HEAD
      - "```"
      - ""
      - "**Cherry Pick**"
      - "```bash"
      - git fetch origin refs/heads/G1 && git cherry-pick FETCH_HEAD
      - "```"
      - ""
      - "**Pull**"
      - "```bash"
      - git pull origin refs/heads/G1
      - "```"
      - ""
      - "</details>"
      - ""
      - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
    base_branch: ~
retry:
  - id: G2
    number: 102
    node_id: PR_102
    title: ~
    body:
      - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
      - ""
      - "{ repeated: U+0001, count: 90000 }"
      - ""
      - "---"
      - ""
      - "- 👉 #102"
      - "- 　  #101"
      - "- 　  #100"
      - ""
      - "<details>"
      - "<summary><strong>⬇️ Download this PR</strong></summary>"
      - ""
      - "######"
      - ""
      - "**Branch**"
      - "```bash"
      - git fetch origin refs/heads/G2 && git checkout -b pr-G2 FETCH_HEAD
      - "```"
      - ""
      - "**Checkout**"
      - "```bash"
      - git fetch origin refs/heads/G2 && git checkout FETCH_HEAD
      - "```"
      - ""
      - "**Cherry Pick**"
      - "```bash"
      - git fetch origin refs/heads/G2 && git cherry-pick FETCH_HEAD
      - "```"
      - ""
      - "**Pull**"
      - "```bash"
      - git pull origin refs/heads/G2
      - "```"
      - ""
      - "</details>"
      - ""
      - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
    base_branch: ~
