src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__semantic_oracle__nonroot_to_root_stale_open_exact_update.snap
---
source: src/pre_push/publication_attempt/semantic_oracle.rs
expression: update_snapshot(&attempt.trace)
---
- id: Gmove
  number: 100
  node_id: PR_100
  title: Moved root
  body:
    - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
    - ""
    - Moved root body
    - ""
    - "---"
    - ""
    - "- 👉 #100"
    - ""
    - ""
    - "**Latest Update:** v2 — [Compare vs v1](/owner/repo/compare/gherrit/Gmove/v1..gherrit/Gmove/v2)"
    - ""
    - "<details>"
    - "<summary><strong>📚 Full Patch History</strong></summary>"
    - ""
    - "*Links show the diff between the row version and the column version.*"
    - ""
    - "|Version| v1 |Base|"
    - "|:---|:---|:---|"
    - "|v2|[vs v1](/owner/repo/compare/gherrit/Gmove/v1..gherrit/Gmove/v2)|[vs Base](/owner/repo/compare/0000000000000000000000000000000000000001...gherrit/Gmove/v2)|"
    - "|v1||[vs Base](/owner/repo/compare/000000000000000000000000000000000000001e...gherrit/Gmove/v1)|"
    - ""
    - "</details>"
    - "<details>"
    - "<summary><strong>⬇️ Download this PR</strong></summary>"
    - ""
    - "######"
    - ""
    - "**Branch**"
    - "```bash"
    - git fetch origin refs/heads/Gmove && git checkout -b pr-Gmove FETCH_HEAD
    - "```"
    - ""
    - "**Checkout**"
    - "```bash"
    - git fetch origin refs/heads/Gmove && git checkout FETCH_HEAD
    - "```"
    - ""
    - "**Cherry Pick**"
    - "```bash"
    - git fetch origin refs/heads/Gmove && git cherry-pick FETCH_HEAD
    - "```"
    - ""
    - "**Pull**"
    - "```bash"
    - git pull origin refs/heads/Gmove
    - "```"
    - ""
    - "</details>"
    - ""
    - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
  base_branch: main
