src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__semantic_oracle__stale_amend_rebase_updates.snap
---
source: src/pre_push/publication_attempt/semantic_oracle.rs
expression: update_snapshot(&attempt.trace)
---
- id: Groot
  number: 100
  node_id: PR_100
  title: Amended root
  body:
    - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
    - ""
    - New root body
    - ""
    - "---"
    - ""
    - "- 　  #101"
    - "- 👉 #100"
    - ""
    - ""
    - "**Latest Update:** v2 — [Compare vs v1](/owner/repo/compare/gherrit/Groot/v1..gherrit/Groot/v2)"
    - ""
    - "<details>"
    - "<summary><strong>📚 Full Patch History</strong></summary>"
    - ""
    - "*Links show the diff between the row version and the column version.*"
    - ""
    - "|Version| v1 |Base|"
    - "|:---|:---|:---|"
    - "|v2|[vs v1](/owner/repo/compare/gherrit/Groot/v1..gherrit/Groot/v2)|[vs Base](/owner/repo/compare/0000000000000000000000000000000000000001...gherrit/Groot/v2)|"
    - "|v1||[vs Base](/owner/repo/compare/0000000000000000000000000000000000000001...gherrit/Groot/v1)|"
    - ""
    - "</details>"
    - "<details>"
    - "<summary><strong>⬇️ Download this PR</strong></summary>"
    - ""
    - "######"
    - ""
    - "**Branch**"
    - "```bash"
    - git fetch origin refs/heads/Groot && git checkout -b pr-Groot FETCH_HEAD
    - "```"
    - ""
    - "**Checkout**"
    - "```bash"
    - git fetch origin refs/heads/Groot && git checkout FETCH_HEAD
    - "```"
    - ""
    - "**Cherry Pick**"
    - "```bash"
    - git fetch origin refs/heads/Groot && git cherry-pick FETCH_HEAD
    - "```"
    - ""
    - "**Pull**"
    - "```bash"
    - git pull origin refs/heads/Groot
    - "```"
    - ""
    - "</details>"
    - ""
    - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
  base_branch: ~
- id: Gchild
  number: 101
  node_id: PR_101
  title: Rebased child
  body:
    - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
    - ""
    - New child body
    - ""
    - "---"
    - ""
    - "- 👉 #101"
    - "- 　  #100"
    - ""
    - ""
    - "**Latest Update:** v2 — [Compare vs v1](/owner/repo/compare/gherrit/Gchild/v1..gherrit/Gchild/v2)"
    - ""
    - "<details>"
    - "<summary><strong>📚 Full Patch History</strong></summary>"
    - ""
    - "*Links show the diff between the row version and the column version.*"
    - ""
    - "|Version| v1 |Base|"
    - "|:---|:---|:---|"
    - "|v2|[vs v1](/owner/repo/compare/gherrit/Gchild/v1..gherrit/Gchild/v2)|[vs Base](/owner/repo/compare/000000000000000000000000000000000000000b...gherrit/Gchild/v2)|"
    - "|v1||[vs Base](/owner/repo/compare/000000000000000000000000000000000000000a...gherrit/Gchild/v1)|"
    - ""
    - "</details>"
    - "<details>"
    - "<summary><strong>⬇️ Download this PR</strong></summary>"
    - ""
    - "######"
    - ""
    - "**Branch**"
    - "```bash"
    - git fetch origin refs/heads/Gchild && git checkout -b pr-Gchild FETCH_HEAD
    - "```"
    - ""
    - "**Checkout**"
    - "```bash"
    - git fetch origin refs/heads/Gchild && git checkout FETCH_HEAD
    - "```"
    - ""
    - "**Cherry Pick**"
    - "```bash"
    - git fetch origin refs/heads/Gchild && git cherry-pick FETCH_HEAD
    - "```"
    - ""
    - "**Pull**"
    - "```bash"
    - git pull origin refs/heads/Gchild
    - "```"
    - ""
    - "</details>"
    - ""
    - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
  base_branch: ~
