src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__semantic_oracle__two_change_final_updates.snap
---
source: src/pre_push/publication_attempt/semantic_oracle.rs
expression: update_snapshot(&report.trace)
---
- id: Groot
  number: 100
  node_id: PR_100
  title: ~
  body:
    - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
    - ""
    - Root body
    - ""
    - "---"
    - ""
    - "- 　  #101"
    - "- 👉 #100"
    - ""
    - "<details>"
    - "<summary><strong>⬇️ Download this PR</strong></summary>"
    - ""
    - "######"
    - ""
    - "**Branch**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git checkout -b pr-Groot FETCH_HEAD"
    - "```"
    - ""
    - "**Checkout**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git checkout FETCH_HEAD"
    - "```"
    - ""
    - "**Cherry Pick**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git cherry-pick FETCH_HEAD"
    - "```"
    - ""
    - "**Pull**"
    - "```bash"
    - "git pull https://github.com/owner/repo.git refs/heads/Groot"
    - "```"
    - ""
    - "</details>"
    - ""
    - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
  base_branch: main
- id: Gchild
  number: 101
  node_id: PR_101
  title: ~
  body:
    - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
    - ""
    - Child body
    - ""
    - "---"
    - ""
    - "- 👉 #101"
    - "- 　  #100"
    - ""
    - "<details>"
    - "<summary><strong>⬇️ Download this PR</strong></summary>"
    - ""
    - "######"
    - ""
    - "**Branch**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Gchild && git checkout -b pr-Gchild FETCH_HEAD"
    - "```"
    - ""
    - "**Checkout**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Gchild && git checkout FETCH_HEAD"
    - "```"
    - ""
    - "**Cherry Pick**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Gchild && git cherry-pick FETCH_HEAD"
    - "```"
    - ""
    - "**Pull**"
    - "```bash"
    - "git pull https://github.com/owner/repo.git refs/heads/Gchild"
    - "```"
    - ""
    - "</details>"
    - ""
    - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
  base_branch: ~
