src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__semantic_oracle__two_change_provisional_creates.snap
---
source: src/pre_push/publication_attempt/semantic_oracle.rs
expression: create_snapshot(&report.trace)
---
- id: Groot
  title: Root title
  head_oid: "0000000000000000000000000000000000000014"
  base_oid: 000000000000000000000000000000000000000a
  body:
    - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
    - ""
    - Root body
    - ""
    - "---"
    - ""
    - ""
    - "<details>"
    - "<summary><strong>⬇️ Download this PR</strong></summary>"
    - ""
    - "######"
    - ""
    - "**Branch**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git checkout -b pr-Groot FETCH_HEAD"
    - "```"
    - ""
    - "**Checkout**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git checkout FETCH_HEAD"
    - "```"
    - ""
    - "**Cherry Pick**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Groot && git cherry-pick FETCH_HEAD"
    - "```"
    - ""
    - "**Pull**"
    - "```bash"
    - "git pull https://github.com/owner/repo.git refs/heads/Groot"
    - "```"
    - ""
    - "</details>"
    - ""
    - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
- id: Gchild
  title: Child title
  head_oid: "0000000000000000000000000000000000000015"
  base_oid: "0000000000000000000000000000000000000014"
  body:
    - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
    - ""
    - Child body
    - ""
    - "---"
    - ""
    - ""
    - "<details>"
    - "<summary><strong>⬇️ Download this PR</strong></summary>"
    - ""
    - "######"
    - ""
    - "**Branch**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Gchild && git checkout -b pr-Gchild FETCH_HEAD"
    - "```"
    - ""
    - "**Checkout**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Gchild && git checkout FETCH_HEAD"
    - "```"
    - ""
    - "**Cherry Pick**"
    - "```bash"
    - "git fetch https://github.com/owner/repo.git refs/heads/Gchild && git cherry-pick FETCH_HEAD"
    - "```"
    - ""
    - "**Pull**"
    - "```bash"
    - "git pull https://github.com/owner/repo.git refs/heads/Gchild"
    - "```"
    - ""
    - "</details>"
    - ""
    - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
