src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__semantic_oracle__winning_marker_contender_projection.snap
---
source: src/pre_push/publication_attempt/semantic_oracle.rs
expression: projection_snapshot(&competing.trace)
---
- - operation: update
    id: Gmarkerrace
    number: 101
    node_id: PR_101
    title: ~
    body:
      - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
      - ""
      - Body for Gmarkerrace
      - ""
      - "---"
      - ""
      - "- 👉 #101"
      - ""
      - "<details>"
      - "<summary><strong>⬇️ Download this PR</strong></summary>"
      - ""
      - "######"
      - ""
      - "**Branch**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Gmarkerrace && git checkout -b pr-Gmarkerrace FETCH_HEAD"
      - "```"
      - ""
      - "**Checkout**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Gmarkerrace && git checkout FETCH_HEAD"
      - "```"
      - ""
      - "**Cherry Pick**"
      - "```bash"
      - "git fetch https://github.com/owner/repo.git refs/heads/Gmarkerrace && git cherry-pick FETCH_HEAD"
      - "```"
      - ""
      - "**Pull**"
      - "```bash"
      - "git pull https://github.com/owner/repo.git refs/heads/Gmarkerrace"
      - "```"
      - ""
      - "</details>"
      - ""
      - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
    base_branch: main
